# iot_research

./: .gitignore  main.py  pyproject.toml  train.ipynb  xgb.ipynb
database/: connection.py  generation.py  model.py  query.py
