[project]
name = "iot-research"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "optuna>=4.6.0",
    "pandas>=2.3.3",
    "psycopg2>=2.9.11",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.45",
    "torch>=2.9.1",
    "xgboost>=3.1.2",
]
